angular-hello-world/angular-hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: angular-hello-world-deployment
  name: angular-hello-world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-hello-world-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: angular-hello-world-deployment
    spec:
      containers:
      - image: jacflesher/angular-hello-world:v0.1
        name: angular-hello-world
        resources: {}
status: {}
