angular-hello-world/angular-hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: angular-hello-world-service
  name: angular-hello-world-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: angular-hello-world-service
  type: ClusterIP
status:
  loadBalancer: {}
